# vlm_app

./: .env  Cargo.toml  README.md  index.html
Scripts/.ps/: main.ps1
Scripts/.sh/: install.sh  vlm.sh
benchmarks/: Cargo.toml  globals.js  runtime.js
benchmarks/src/: lib.rs
crates/vlm/: Cargo.toml
crates/vlm/src/: common.rs  lib.rs
crates/vlm/src/common/: cli.rs  scopes.rs  vs_span.rs
crates/vlm_macro/: Cargo.toml
crates/vlm_macro/src/: cli.rs  common.rs  errors.rs  lib.rs  web.rs
crates/vlm_macro/src/cli/: cl.rs
crates/vlm_macro/src/common/: colors.rs  deno.rs  span.rs  tasks.rs  vlm.rs
crates/vlm_macro/src/web/: span.rs  web_1.rs
crates/vlm_macro/vlm_macro_derive/: Cargo.toml
crates/vlm_macro/vlm_macro_derive/src/: lib.rs
src/: main.rs
tests/: test_v.rs
vlm_vs/: Cargo.toml
