[package]
name = "vlm_app"
version = "0.1.0"
edition = "2024"


[workspace]
members = [
    "crates/vlm_macro","crates/vlm_macro/vlm_macro_derive","crates/vlm"
]

[workspace.dependencies]
clap = "4.0"
reqwest = { version = "0.11", features = ["blocking"] }
regex="1"
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = "2.0.99"
tokio = {version = "1.43.0",features = ["rt","macros","full"]}
warp = "0.3.7"
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"
web-sys = "0.3.70"
vlm_macro_derive={path = "crates/vlm_macro/vlm_macro_derive"}

[dependencies]
regex.workspace = true
vlm={path = "crates/vlm"}

