[package]
name = "vlm_app"
version = "0.1.0"
edition = "2024"
exclude = ["crates/vlmapp"]



[workspace]
members = [
    "crates/vlm",
    "crates/vlm_macro","crates/vlm_macro/vlm_macro_derive"
, "vlm_vs", "benchmarks"]

[workspace.dependencies]
url={version = "0.2",default-features = true}
mlua={version = "0.6", features = ["Lua54"]}
rlua={version = "0.41", features = ["lua54","async"]}
php-rs = "0.8"
rusty_v8 = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
clap = {version = "4.0", features = ["derive"]}
reqwest = { version = "0.11", features = ["blocking"] }
regex="1"
lazy_static = "1.4"
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = "2.0.99"
tokio = {version = "1.43.0",features = ["rt","macros","full","rt-multi-thread"]}
tower-lsp = "0.16"
async-trait = "0.1"
warp = "0.3.7"
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"
svg = "0.8.2"
cacache = "13.1.0"
zip = "0.5.13"
tar = "0.4.38"
web-sys = "0.3.70"
toml = "0.5.8"
dotenv = "0.15.0"
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
log="0.4.26"
notify="8.0.0"
once_cell="1"
vlm_macro={path = "crates/vlm_macro"}
vlm_macro_derive={path = "crates/vlm_macro/vlm_macro_derive"}
vlm={path = "crates/vlm"}
ollama-rs = "0.1.6"
[dependencies]
vlm={path = "crates/vlm"}
clap.workspace=true
# Removed invalid [project.exclude] block since its configuration is now part of the [package] table.
