[package]
name = "vlm_macro_derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro=true

[dependencies]
url={workspace = true,default-features = true}
tokio={workspace = true}
warp={workspace = true}
proc-macro2={workspace = true}
syn={workspace = true}
quote={workspace = true}
serde_json={workspace = true}
